--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-md-6">
+    <p>All workshop sessions will begin 9:00 am and end at 12:30 pm (US Central Time)</p>
     <table class="table table-striped">
       <tr> <td><b>Before</b></td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
       <tr> <td><b>January 4</b></td>  <td><a href="https://swcarpentry.github.io/shell-novice/">Automating Tasks with the Unix Shell</a></td> </tr>
